--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col l-5 l-0-5 m-5 m-0-5 c-4 c-0-5">
                     <a href="#">
-                    <img src="./img/wordsearch.png" alt="WordSearch Logo">
+                    <img src="./wordsearch.png" alt="WordSearch Logo">
                     </a>
                 </div>
             </div>
